# ALVR

.github/workflows/: build-servers.yml
alvr/client_core/: Cargo.toml
alvr/client_core/cpp/: bindings.h
alvr/client_core/src/: c_api.rs  connection.rs
alvr/client_openxr/: Cargo.toml
alvr/client_openxr/src/: interaction.rs  lib.rs
alvr/commands/: Cargo.toml
alvr/dashboard/: Cargo.toml
alvr/dashboard/src/: data_sources.rs  logging_backend.rs  main.rs  steamvr_launcher.rs  theme.rs
alvr/dashboard/src/dashboard/: mod.rs
alvr/dashboard/src/dashboard/basic_components/: button_group.rs
alvr/dashboard/src/dashboard/components/: about.rs  connections.rs  installation.rs  logs.rs  settings.rs  setup_wizard.rs  statistics.rs
alvr/dashboard/src/dashboard/components/settings_controls/: array.rs  boolean.rs  choice.rs  mod.rs  number.rs  numeric.rs  optional.rs  presets.rs  reset.rs  section.rs  switch.rs  text.rs
alvr/dashboard/src/dashboard/components/settings_controls/presets/: builtin_schema.rs
alvr/dashboard/src/launcher/: mod.rs
alvr/dashboard/src/worker/: gui_handler.rs  mod.rs
alvr/events/src/: lib.rs
alvr/server/: Cargo.toml
alvr/server/cpp/alvr_server/: OvrController.cpp  OvrHMD.cpp  alvr_server.cpp  bindings.h
alvr/server/src/: bitrate.rs  connection.rs  lib.rs  logging_backend.rs  tracking.rs  web_server.rs
alvr/server_data/: Cargo.toml
alvr/server_data/src/: lib.rs
alvr/session/: Cargo.toml
alvr/session/src/: lib.rs  settings.rs
alvr/sockets/: Cargo.toml
alvr/sockets/src/: packets.rs
alvr/xtask/src/: build.rs
(+2 files in other folders)
