[package]
name = "alvr_dashboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_commands.workspace = true
alvr_common.workspace = true
alvr_events.workspace = true
alvr_filesystem.workspace = true
alvr_server_data.workspace = true
alvr_session.workspace = true
alvr_sockets.workspace = true

bincode = "1"
eframe = { version = "0.21", default-features = false, features = [
    "wgpu",
    "default_fonts",
] }
egui = "0.21"
egui_extras = "0.21"
env_logger = "0.10"
futures-util = "0.3"
serde_json = "1"
settings-schema = { git = "https://github.com/zarik5/settings-schema-rs" }
sysinfo = { version = "0.27", default-features = false }
tungstenite = "0.18"
ureq = { version = "2", features = ["json"] }
url = "2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
